crates/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__uptake-and-special.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "line_type": "header",
      "header": {
        "type": "utf8"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "begin"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "languages",
        "codes": [
          "eng"
        ]
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "participants",
        "entries": [
          {
            "speaker_code": "SPK",
            "name": null,
            "role": "Speaker"
          },
          {
            "speaker_code": "LSN",
            "name": null,
            "role": "Adult"
          }
        ]
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "options",
        "options": [
          "CA"
        ]
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "id",
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "SPK",
        "role": "Speaker"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "id",
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "LSN",
        "role": "Adult"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "comment",
        "content": {
          "segments": [
            {
              "type": "text",
              "text": "Uptake continuation, CA continuation markers, CA special"
            }
          ]
        }
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "comment",
        "content": {
          "segments": [
            {
              "type": "text",
              "text": "Constructs: uptake_symbol, ca_continuation_marker,"
            },
            {
              "type": "continuation"
            },
            {
              "type": "text",
              "text": "unmarked_ending (missing terminator in CA)"
            }
          ]
        }
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "SPK",
        "content": {
          "content": [
            {
              "type": "word",
              "raw_text": "I",
              "cleaned_text": "I",
              "content": [
                {
                  "type": "text",
                  "content": "I"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "didn't",
              "cleaned_text": "didn't",
              "content": [
                {
                  "type": "text",
                  "content": "didn't"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "give",
              "cleaned_text": "give",
              "content": [
                {
                  "type": "text",
                  "content": "give"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "you",
              "cleaned_text": "you",
              "content": [
                {
                  "type": "text",
                  "content": "you"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "anything",
              "cleaned_text": "anything",
              "content": [
                {
                  "type": "text",
                  "content": "anything"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "today",
              "cleaned_text": "today",
              "content": [
                {
                  "type": "text",
                  "content": "today"
                }
              ]
            },
            {
              "type": "separator",
              "kind": "uptake"
            }
          ]
        }
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "LSN",
        "content": {
          "content": [
            {
              "type": "separator",
              "kind": "uptake"
            },
            {
              "type": "word",
              "raw_text": "nothing",
              "cleaned_text": "nothing",
              "content": [
                {
                  "type": "text",
                  "content": "nothing"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "that",
              "cleaned_text": "that",
              "content": [
                {
                  "type": "text",
                  "content": "that"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "adds",
              "cleaned_text": "adds",
              "content": [
                {
                  "type": "text",
                  "content": "adds"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "to",
              "cleaned_text": "to",
              "content": [
                {
                  "type": "text",
                  "content": "to"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "what",
              "cleaned_text": "what",
              "content": [
                {
                  "type": "text",
                  "content": "what"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "we",
              "cleaned_text": "we",
              "content": [
                {
                  "type": "text",
                  "content": "we"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "had",
              "cleaned_text": "had",
              "content": [
                {
                  "type": "text",
                  "content": "had"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "earlier",
              "cleaned_text": "earlier",
              "content": [
                {
                  "type": "text",
                  "content": "earlier"
                }
              ]
            }
          ],
          "terminator": {
            "type": "period"
          }
        }
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "SPK",
        "content": {
          "content": [
            {
              "type": "word",
              "raw_text": "right",
              "cleaned_text": "right",
              "content": [
                {
                  "type": "text",
                  "content": "right"
                }
              ]
            },
            {
              "type": "separator",
              "kind": "uptake"
            }
          ]
        }
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "LSN",
        "content": {
          "content": [
            {
              "type": "separator",
              "kind": "uptake"
            },
            {
              "type": "word",
              "raw_text": "his",
              "cleaned_text": "his",
              "content": [
                {
                  "type": "text",
                  "content": "his"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "counsel",
              "cleaned_text": "counsel",
              "content": [
                {
                  "type": "text",
                  "content": "counsel"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "says",
              "cleaned_text": "says",
              "content": [
                {
                  "type": "text",
                  "content": "says"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "he",
              "cleaned_text": "he",
              "content": [
                {
                  "type": "text",
                  "content": "he"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "will",
              "cleaned_text": "will",
              "content": [
                {
                  "type": "text",
                  "content": "will"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "not",
              "cleaned_text": "not",
              "content": [
                {
                  "type": "text",
                  "content": "not"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "permit",
              "cleaned_text": "permit",
              "content": [
                {
                  "type": "text",
                  "content": "permit"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "him",
              "cleaned_text": "him",
              "content": [
                {
                  "type": "text",
                  "content": "him"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "to",
              "cleaned_text": "to",
              "content": [
                {
                  "type": "text",
                  "content": "to"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "plead",
              "cleaned_text": "plead",
              "content": [
                {
                  "type": "text",
                  "content": "plead"
                }
              ]
            }
          ],
          "terminator": {
            "type": "period"
          }
        }
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "end"
      }
    }
  ],
  "participants": {
    "SPK": {
      "code": "SPK",
      "name": null,
      "role": "Speaker",
      "id": {
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "SPK",
        "role": "Speaker"
      },
      "birth_date": null
    },
    "LSN": {
      "code": "LSN",
      "name": null,
      "role": "Adult",
      "id": {
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "LSN",
        "role": "Adult"
      },
      "birth_date": null
    }
  },
  "languages": [
    "eng"
  ],
  "options": [
    "CA"
  ]
}
