crates/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__user-defined.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "line_type": "header",
      "header": {
        "type": "utf8"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "begin"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "languages",
        "codes": [
          "eng"
        ]
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "participants",
        "entries": [
          {
            "speaker_code": "CHI",
            "name": null,
            "role": "Child"
          },
          {
            "speaker_code": "MOT",
            "name": null,
            "role": "Mother"
          }
        ]
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "id",
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "CHI",
        "age": "3;0",
        "role": "Child"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "id",
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "MOT",
        "role": "Mother"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "comment",
        "content": {
          "segments": [
            {
              "type": "text",
              "text": "User-defined dependent tiers: %xtra, %xcod, %xpho, %xmod (x-prefix tiers)"
            }
          ]
        }
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "comment",
        "content": {
          "segments": [
            {
              "type": "text",
              "text": "Constructs: x_dependent_tier, x_tier_prefix"
            }
          ]
        }
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "CHI",
        "content": {
          "content": [
            {
              "type": "word",
              "raw_text": "hello",
              "cleaned_text": "hello",
              "content": [
                {
                  "type": "text",
                  "content": "hello"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "there",
              "cleaned_text": "there",
              "content": [
                {
                  "type": "text",
                  "content": "there"
                }
              ]
            }
          ],
          "terminator": {
            "type": "period"
          }
        }
      },
      "dependent_tiers": [
        {
          "type": "UserDefined",
          "data": {
            "label": "xtra",
            "content": "extra annotation"
          }
        },
        {
          "type": "UserDefined",
          "data": {
            "label": "xcod",
            "content": "extra coding"
          }
        },
        {
          "type": "UserDefined",
          "data": {
            "label": "xpho",
            "content": "extra phonological"
          }
        },
        {
          "type": "UserDefined",
          "data": {
            "label": "xmod",
            "content": "extra model"
          }
        }
      ]
    },
    {
      "line_type": "header",
      "header": {
        "type": "end"
      }
    }
  ],
  "participants": {
    "CHI": {
      "code": "CHI",
      "name": null,
      "role": "Child",
      "id": {
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "CHI",
        "age": "3;0",
        "role": "Child"
      },
      "birth_date": null
    },
    "MOT": {
      "code": "MOT",
      "name": null,
      "role": "Mother",
      "id": {
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "MOT",
        "role": "Mother"
      },
      "birth_date": null
    }
  },
  "languages": [
    "eng"
  ],
  "options": []
}
