crates/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__wor.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "2;0",
        "corpus": "sample",
        "language": "eng",
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "sample",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "filename": "wor",
        "media_type": "audio",
        "type": "media"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Word-level timing tier (%wor) with per-word timestamps",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: wor_dependent_tier, wor_tier_prefix, wor_tier_body, wor_word_item",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "bullet": null,
            "items": [
              {
                "cleaned_text": "hello",
                "content": [
                  {
                    "content": "hello",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 300,
                  "start_ms": 100
                },
                "kind": "word",
                "raw_text": "hello"
              },
              {
                "cleaned_text": "world",
                "content": [
                  {
                    "content": "world",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 600,
                  "start_ms": 300
                },
                "kind": "word",
                "raw_text": "world"
              }
            ],
            "language_code": null,
            "terminator": {
              "type": "period"
            }
          },
          "type": "Wor"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 600,
            "start_ms": 100
          },
          "content": [
            {
              "cleaned_text": "hello",
              "content": [
                {
                  "content": "hello",
                  "type": "text"
                }
              ],
              "raw_text": "hello",
              "type": "word"
            },
            {
              "cleaned_text": "world",
              "content": [
                {
                  "content": "world",
                  "type": "text"
                }
              ],
              "raw_text": "world",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "bullet": null,
            "items": [
              {
                "cleaned_text": "how",
                "content": [
                  {
                    "content": "how",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 800,
                  "start_ms": 700
                },
                "kind": "word",
                "raw_text": "how"
              },
              {
                "cleaned_text": "are",
                "content": [
                  {
                    "content": "are",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 1000,
                  "start_ms": 800
                },
                "kind": "word",
                "raw_text": "are"
              },
              {
                "cleaned_text": "you",
                "content": [
                  {
                    "content": "you",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 1200,
                  "start_ms": 1000
                },
                "kind": "word",
                "raw_text": "you"
              }
            ],
            "language_code": null,
            "terminator": {
              "type": "period"
            }
          },
          "type": "Wor"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 1200,
            "start_ms": 700
          },
          "content": [
            {
              "cleaned_text": "how",
              "content": [
                {
                  "content": "how",
                  "type": "text"
                }
              ],
              "raw_text": "how",
              "type": "word"
            },
            {
              "cleaned_text": "are",
              "content": [
                {
                  "content": "are",
                  "type": "text"
                }
              ],
              "raw_text": "are",
              "type": "word"
            },
            {
              "cleaned_text": "you",
              "content": [
                {
                  "content": "you",
                  "type": "text"
                }
              ],
              "raw_text": "you",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "media": {
    "filename": "wor",
    "media_type": "audio"
  },
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "2;0",
        "corpus": "sample",
        "language": "eng",
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "sample",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
