crates/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__words-basic.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;0",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Simple words, compound words (A+B), hyphens",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: standalone_word, word_with_optional_annotations,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "compound words with +, hyphenated words",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "I",
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "type": "word"
            },
            {
              "cleaned_text": "want",
              "content": [
                {
                  "content": "want",
                  "type": "text"
                }
              ],
              "raw_text": "want",
              "type": "word"
            },
            {
              "cleaned_text": "icecream",
              "content": [
                {
                  "content": "ice",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 319,
                      "start": 318
                    }
                  },
                  "type": "compound_marker"
                },
                {
                  "content": "cream",
                  "type": "text"
                }
              ],
              "raw_text": "ice+cream",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "what",
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "type": "word"
            },
            {
              "cleaned_text": "about",
              "content": [
                {
                  "content": "about",
                  "type": "text"
                }
              ],
              "raw_text": "about",
              "type": "word"
            },
            {
              "cleaned_text": "choochoo's",
              "content": [
                {
                  "content": "choo",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 349,
                      "start": 348
                    }
                  },
                  "type": "compound_marker"
                },
                {
                  "content": "choo's",
                  "type": "text"
                }
              ],
              "raw_text": "choo+choo's",
              "type": "word"
            },
            {
              "cleaned_text": "wheel",
              "content": [
                {
                  "content": "wheel",
                  "type": "text"
                }
              ],
              "raw_text": "wheel",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "the",
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "type": "word"
            },
            {
              "cleaned_text": "merry-go-round",
              "content": [
                {
                  "content": "merry-go-round",
                  "type": "text"
                }
              ],
              "raw_text": "merry-go-round",
              "type": "word"
            },
            {
              "cleaned_text": "is",
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "type": "word"
            },
            {
              "cleaned_text": "fun",
              "content": [
                {
                  "content": "fun",
                  "type": "text"
                }
              ],
              "raw_text": "fun",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "let",
              "content": [
                {
                  "content": "let",
                  "type": "text"
                }
              ],
              "raw_text": "let",
              "type": "word"
            },
            {
              "cleaned_text": "us",
              "content": [
                {
                  "content": "us",
                  "type": "text"
                }
              ],
              "raw_text": "us",
              "type": "word"
            },
            {
              "cleaned_text": "get",
              "content": [
                {
                  "content": "get",
                  "type": "text"
                }
              ],
              "raw_text": "get",
              "type": "word"
            },
            {
              "cleaned_text": "some",
              "content": [
                {
                  "content": "some",
                  "type": "text"
                }
              ],
              "raw_text": "some",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;0",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
