crates/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__words-prosody.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "line_type": "header",
      "header": {
        "type": "utf8"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "begin"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "languages",
        "codes": [
          "eng"
        ]
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "participants",
        "entries": [
          {
            "speaker_code": "CHI",
            "name": null,
            "role": "Child"
          },
          {
            "speaker_code": "MOT",
            "name": null,
            "role": "Mother"
          }
        ]
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "id",
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "CHI",
        "age": "3;0",
        "role": "Child"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "id",
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "MOT",
        "role": "Mother"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "comment",
        "content": {
          "segments": [
            {
              "type": "text",
              "text": "Prosodic features: lengthening (a:b), underline markers"
            }
          ]
        }
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "comment",
        "content": {
          "segments": [
            {
              "type": "text",
              "text": "Constructs: lengthening colons, underline_begin, underline_end"
            }
          ]
        }
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "CHI",
        "content": {
          "content": [
            {
              "type": "word",
              "raw_text": "no::",
              "cleaned_text": "no",
              "content": [
                {
                  "type": "text",
                  "content": "no"
                },
                {
                  "type": "lengthening",
                  "content": {
                    "count": 2,
                    "span": {
                      "start": 283,
                      "end": 285
                    }
                  }
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "I",
              "cleaned_text": "I",
              "content": [
                {
                  "type": "text",
                  "content": "I"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "do:n't",
              "cleaned_text": "don't",
              "content": [
                {
                  "type": "text",
                  "content": "do"
                },
                {
                  "type": "lengthening",
                  "content": {
                    "span": {
                      "start": 290,
                      "end": 291
                    }
                  }
                },
                {
                  "type": "text",
                  "content": "n't"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "wa:nt",
              "cleaned_text": "want",
              "content": [
                {
                  "type": "text",
                  "content": "wa"
                },
                {
                  "type": "lengthening",
                  "content": {
                    "span": {
                      "start": 297,
                      "end": 298
                    }
                  }
                },
                {
                  "type": "text",
                  "content": "nt"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "to",
              "cleaned_text": "to",
              "content": [
                {
                  "type": "text",
                  "content": "to"
                }
              ]
            }
          ],
          "terminator": {
            "type": "period"
          }
        }
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "MOT",
        "content": {
          "content": [
            {
              "type": "word",
              "raw_text": "ple:ase",
              "cleaned_text": "please",
              "content": [
                {
                  "type": "text",
                  "content": "ple"
                },
                {
                  "type": "lengthening",
                  "content": {
                    "span": {
                      "start": 315,
                      "end": 316
                    }
                  }
                },
                {
                  "type": "text",
                  "content": "ase"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "eat",
              "cleaned_text": "eat",
              "content": [
                {
                  "type": "text",
                  "content": "eat"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "your",
              "cleaned_text": "your",
              "content": [
                {
                  "type": "text",
                  "content": "your"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "dinner",
              "cleaned_text": "dinner",
              "content": [
                {
                  "type": "text",
                  "content": "dinner"
                }
              ]
            }
          ],
          "terminator": {
            "type": "period"
          }
        }
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "CHI",
        "content": {
          "content": [
            {
              "type": "word",
              "raw_text": "we",
              "cleaned_text": "we",
              "content": [
                {
                  "type": "text",
                  "content": "we"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "need",
              "cleaned_text": "need",
              "content": [
                {
                  "type": "text",
                  "content": "need"
                }
              ]
            },
            {
              "type": "underline_begin"
            },
            {
              "type": "word",
              "raw_text": "to",
              "cleaned_text": "to",
              "content": [
                {
                  "type": "text",
                  "content": "to"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "do",
              "cleaned_text": "do",
              "content": [
                {
                  "type": "text",
                  "content": "do"
                }
              ]
            },
            {
              "type": "underline_end"
            },
            {
              "type": "word",
              "raw_text": "something",
              "cleaned_text": "something",
              "content": [
                {
                  "type": "text",
                  "content": "something"
                }
              ]
            }
          ],
          "terminator": {
            "type": "period"
          }
        }
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "end"
      }
    }
  ],
  "participants": {
    "CHI": {
      "code": "CHI",
      "name": null,
      "role": "Child",
      "id": {
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "CHI",
        "age": "3;0",
        "role": "Child"
      },
      "birth_date": null
    },
    "MOT": {
      "code": "MOT",
      "name": null,
      "role": "Mother",
      "id": {
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "MOT",
        "role": "Mother"
      },
      "birth_date": null
    }
  },
  "languages": [
    "eng"
  ],
  "options": []
}
